<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/title_back_toolbar" />


        <EditText
            android:id="@+id/etfirstnamea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/style_edittext"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="   First name" />

        <EditText
            android:id="@+id/etlastnamea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/style_edittext"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="   Last name" />

        <EditText
            android:id="@+id/etphonenumbera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/style_edittext"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:hint="   Phone Number" />

        <Button
            android:id="@+id/btnAddFriend"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/style_button"
            android:text="Add Friend"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.core.widget.NestedScrollView>