<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC212121"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/etBacktoLogink"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/etusernamelogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_edittext"
            android:layout_marginTop="100dp"
            android:hint="      Usename"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:background="@drawable/style_edittext"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="   Password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/style_button"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/ettRegister"
            android:layout_height="wrap_content"
            android:text="Not yet!!?      Register"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>

